@@ -1,4 +1,5 @@
 import org.jetbrains.changelog.markdownToHTML
+import org.jetbrains.intellij.tasks.RunIdeTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import java.io.FileOutputStream
 import java.net.URL
@@ -9,12 +10,14 @@ import java.util.zip.ZipInputStream
 
 fun properties(key: String) = project.findProperty(key).toString()
 
-val thunderdomeVersion = "1.0.5"
-
+// Space credentials
 val spaceUsername =
     System.getProperty("space.username")?.toString() ?: project.properties["spaceUsername"]?.toString() ?: ""
 val spacePassword =
     System.getProperty("space.pass")?.toString() ?: project.properties["spacePassword"]?.toString() ?: ""
+
+// the test generation module for interacting with Grazie (used when the space credentials are provided)
+val grazieTestGenerationVersion = "1.0.5"
 
 plugins {
     // Java support
@@ -65,7 +68,7 @@ if (spaceCredentialsProvided()) {
 
     tasks.register("checkCredentials") {
         configurations.detachedConfiguration(
-            dependencies.create("org.jetbrains.research:grazie-test-generation:1.0.1"),
+            dependencies.create("org.jetbrains.research:grazie-test-generation:$grazieTestGenerationVersion"),
         ).files()
     }
 
@@ -96,7 +99,7 @@ if (spaceCredentialsProvided()) {
 }
 
 dependencies {
-    implementation(files("lib/evosuite-$thunderdomeVersion.jar"))
+    implementation(files("lib/evosuite-${properties("evosuiteVersion")}.jar"))
     implementation(files("lib/standalone-runtime.jar"))
     implementation(files("lib/jacocoagent.jar"))
     implementation(files("lib/jacococli.jar"))
@@ -106,6 +109,9 @@ dependencies {
     implementation(files("lib/JUnitRunner.jar"))
 
     implementation(project(":core"))
+    implementation(project(":langwrappers")) // Needed to use Psi related interfaces and load proper implementation
+    implementation(project(":kotlin")) // Needed to load the testspark-kotlin.xml
+    implementation(project(":java")) // Needed to load the testspark-java.xml
     if (spaceCredentialsProvided()) {
         "hasGrazieAccessCompileOnly"(project(":core"))
     }
@@ -151,6 +157,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.mockito/mockito-all
     testImplementation("org.mockito:mockito-all:1.10.19")
+    testImplementation("org.mockito.kotlin:mockito-kotlin:5.1.0")
 
     // https://mvnrepository.com/artifact/net.jqwik/jqwik
     testImplementation("net.jqwik:jqwik:1.6.5")
@@ -166,7 +173,7 @@ dependencies {
         // Dependencies for hasGrazieAccess variant
         "hasGrazieAccessImplementation"(kotlin("stdlib"))
         "hasGrazieAccessImplementation"("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
-        "hasGrazieAccessImplementation"("org.jetbrains.research:grazie-test-generation:1.0.4")
+        "hasGrazieAccessImplementation"("org.jetbrains.research:grazie-test-generation:$grazieTestGenerationVersion")
     }
 }
 
@@ -201,6 +208,7 @@ tasks {
         dependsOn("copyJUnitRunnerLib")
         dependsOn(":core:compileKotlin")
     }
+
     // Set the JVM compatibility versions
     properties("javaVersion").let {
         withType<JavaCompile> {
@@ -313,7 +321,7 @@ abstract class CopyJUnitRunnerLib : DefaultTask() {
  */
 abstract class UpdateEvoSuite : DefaultTask() {
     @Input
-    var version: String = ""
+    var evoSuiteVersion: String = ""
 
     @TaskAction
     fun execute() {
@@ -322,7 +330,7 @@ abstract class UpdateEvoSuite : DefaultTask() {
             libDir.mkdirs()
         }
 
-        val jarName = "evosuite-$version.jar"
+        val jarName = "evosuite-$evoSuiteVersion.jar"
 
         if (libDir.listFiles()?.any { it.name.matches(Regex(jarName)) } == true) {
             logger.info("Specified evosuite jar found, skipping update")
@@ -331,7 +339,7 @@ abstract class UpdateEvoSuite : DefaultTask() {
 
         logger.info("Specified evosuite jar not found, downloading release $jarName")
         val downloadUrl =
-            "https://github.com/ciselab/evosuite/releases/download/thunderdome/release/$version/release.zip"
+            "https://github.com/ciselab/evosuite/releases/download/thunderdome/release/$evoSuiteVersion/release.zip"
         val stream =
             try {
                 URL(downloadUrl).openStream()
@@ -359,12 +367,15 @@ abstract class UpdateEvoSuite : DefaultTask() {
 }
 
 tasks.register<UpdateEvoSuite>("updateEvosuite") {
-    version = thunderdomeVersion
+    evoSuiteVersion = properties("evosuiteVersion")
 }
-
+/**
+ * Copies the JUnitRunner.jar file to the lib directory of the project.
+ * This task depends on the "JUnitRunner" module being built beforehand.
+ * JUnitRunner.jar is required for running tests with coverage in the main plugin
+ */
 tasks.register<Copy>("copyJUnitRunnerLib") {
     dependsOn(":JUnitRunner:jar")
-
     val libName = "JUnitRunner.jar"
     val libSrcDir =
         "${project.projectDir}${File.separator}JUnitRunner${File.separator}build${File.separator}libs${File.separator}"
@@ -373,6 +384,50 @@ tasks.register<Copy>("copyJUnitRunnerLib") {
 
     from(libSrcPath)
     into(libDestDir)
+}
+
+/**
+ * Returns the original string if it is not null, or the default string if the original string is null.
+ *
+ * @param default the default string to return if the original string is null
+ * @return the original string if it is not null, or the default string if the original string is null
+ */
+fun String?.orDefault(default: String): String = this ?: default
+
+/**
+ * This code sets up a Gradle task for running the plugin in headless mode
+ *
+ * @param root The root directory of the project under test.
+ * @param file The file containing unit under test.
+ * @param cut The class under test.
+ * @param cp The classpath of the project.
+ * @param llm The model used for the test generation task.
+ * @param token The token for using LLM.
+ * @param prompt a txt file containing the LLM's prompt template
+ * @param out The output directory for the project.
+ * @param enableCoverage flag to enable/disable coverage computation
+ */
+tasks.create<RunIdeTask>("headless") {
+    val root: String? by project
+    val file: String? by project
+    val cut: String? by project
+    val cp: String? by project
+    val junitv: String? by project
+    val llm: String? by project
+    val token: String? by project
+    val prompt: String? by project
+    val out: String? by project
+    val enableCoverage: String? by project
+
+    args = listOfNotNull("testspark", root, file, cut, cp, junitv, llm, token, prompt, out, enableCoverage.orDefault("false"))
+
+    jvmArgs(
+        "-Xmx16G",
+        "-Djava.awt.headless=true",
+        "--add-exports",
+        "java.base/jdk.internal.vm=ALL-UNNAMED",
+        "-Didea.system.path",
+    )
 }
 
 fun spaceCredentialsProvided() = spaceUsername.isNotEmpty() && spacePassword.isNotEmpty()
